Infer annotation methods separately, detect default expressions